# ffplayer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  widget.cpp  widget.h  widget.ui
ffmpeg/: CMakeLists.txt
src/: CMakeLists.txt  audio_player.cpp  audio_player.h  comments.h  decoder.cpp  decoder.h  player.cpp  player.h  player_w.cpp  player_w.h  player_widget.cpp  player_widget.h  player_widget.ui  t_decoder.cpp  t_decoder.h  t_encoder.cpp  t_encoder.h
temp/: decoder.cpp  decoder.h
test/: CmakeLists.txt  test.cpp  test.h
